--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-raydium-sdk-v2",
-  "version": "2.0.0-beta.9",
+  "version": "0.0.3-alpha",
   "description": "An SDK for building applications on top of Raydium.",
   "license": "GPL-3.0",
   "main": "./lib/index.js",
@@ -32,22 +32,19 @@
     "push": "yarn build && yarn publish",
     "prepare": "husky install"
   },
-  "peerDependencies": {
-    "@solana/buffer-layout": "^4.0.0",
-    "@solana/web3.js": "^1.43.0",
-    "bn.js": "^5.2.0",
-    "lodash": "^4.17.21"
-  },
   "dependencies": {
-    "@colors/colors": "^1.5.0",
     "@project-serum/serum": "^0.13.65",
+    "@solana/buffer-layout": "^4.0.0",
     "@solana/spl-token": "^0.3.4",
+    "@solana/web3.js": "^1.66.2",
     "axios": "^1.1.3",
     "big.js": "^6.2.1",
+    "bn.js": "^5.2.0",
     "buffer": "^6.0.3",
     "dayjs": "^1.11.5",
     "decimal.js-light": "^2.5.1",
     "fecha": "^4.2.3",
+    "lodash": "^4.17.21",
     "toformat": "^2.0.0"
   },
   "devDependencies": {
@@ -55,6 +52,7 @@
     "@babel/preset-env": "^7.18.0",
     "@babel/preset-typescript": "^7.17.12",
     "@solana/spl-token-registry": "^0.2.4041",
+    "@tsconfig/node14": "^1.0.3",
     "@types/big.js": "^6.1.3",
     "@types/bn.js": "^5.1.0",
     "@types/jest": "^27.5.1",
@@ -62,6 +60,7 @@
     "@types/node": "^17.0.35",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
+    "add": "^2.0.6",
     "ajv": "^8.11.0",
     "babel-jest": "^27.5.1",
     "dotenv": "^10.0.0",
@@ -77,6 +76,7 @@
     "ts-node": "^10.7.0",
     "tsup": "^5.12.8",
     "typedoc": "^0.22.15",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "yarn": "^1.22.19"
   }
 }
