--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-raydium-sdk-v2",
-  "version": "0.0.108-alpha",
+  "version": "0.0.1-beta",
   "description": "An SDK for building applications on top of Raydium.",
   "license": "GPL-3.0",
   "main": "./lib/index.js",
@@ -47,7 +47,6 @@
     "buffer": "^6.0.3",
     "dayjs": "^1.11.5",
     "decimal.js-light": "^2.5.1",
-    "fecha": "^4.2.3",
     "lodash": "^4.17.21",
     "toformat": "^2.0.0"
   },
@@ -64,16 +63,12 @@
     "@types/node": "^17.0.35",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
-    "add": "^2.0.6",
-    "ajv": "^8.11.0",
     "babel-jest": "^27.5.1",
-    "dotenv": "^10.0.0",
     "eslint": "^8.15.0",
     "eslint-plugin-tsdoc": "^0.2.16",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
     "lint-staged": "^12.4.1",
-    "npm-check-updates": "^12.5.12",
     "prettier": "^2.6.2",
     "ts-jest": "^27.0.7",
     "ts-jest-resolver": "^2.0.0",
