--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-raydium-sdk-v2",
-  "version": "0.0.130-alpha",
+  "version": "0.0.134-alpha",
   "description": "An SDK for building applications on top of Raydium.",
   "license": "GPL-3.0",
   "main": "./lib/index.js",
@@ -36,6 +36,11 @@
     "push": "yarn build && yarn publish",
     "prepare": "husky install"
   },
+  "resolutions": {
+    "@solana/spl-token": "^0.3.6",
+    "@solana/web3.js": "^1.73.0",
+    "bn.js": "^5.2.1"
+  },
   "dependencies": {
     "@project-serum/serum": "^0.13.65",
     "@solana/buffer-layout": "4.0.0",
@@ -54,7 +59,6 @@
     "@babel/core": "^7.18.0",
     "@babel/preset-env": "^7.18.0",
     "@babel/preset-typescript": "^7.17.12",
-    "@solana/spl-token-registry": "^0.2.4041",
     "@tsconfig/node14": "^1.0.3",
     "@types/big.js": "^6.1.3",
     "@types/bn.js": "^5.1.1",
