--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "test-raydium-sdk-v2",
-  "version": "0.0.299-alpha",
+  "name": "raydium-ui-sdk-v2",
+  "version": "0.0.1-alpha",
   "description": "An SDK for building applications on top of Raydium.",
   "license": "GPL-3.0",
   "main": "./lib/index.js",
