--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@raydium-io/raydium-sdk-v2",
-  "version": "2.0.0-rc.20",
+  "version": "0.0.22-alpha",
   "description": "An SDK for building applications on top of Raydium.",
   "license": "GPL-3.0",
   "main": "./lib/index.js",
@@ -37,15 +37,15 @@
     "prepare": "husky install"
   },
   "resolutions": {
-    "@solana/spl-token": "^0.3.7",
-    "@solana/web3.js": "^1.75.0",
+    "@solana/spl-token": "^0.4.6",
+    "@solana/web3.js": "^1.91.8",
     "bn.js": "^5.2.1"
   },
   "dependencies": {
     "@project-serum/serum": "^0.13.65",
-    "@solana/buffer-layout": "4.0.0",
-    "@solana/spl-token": "^0.3.7",
-    "@solana/web3.js": "^1.75.3",
+    "@solana/buffer-layout": "^4.0.1",
+    "@solana/spl-token": "^0.4.6",
+    "@solana/web3.js": "^1.91.8",
     "axios": "^1.1.3",
     "big.js": "^6.2.1",
     "bn.js": "^5.2.1",
