--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "react-dom": "^18.0.0",
     "react-feather": "^2.0.10",
     "react-i18next": "^12.2.2",
+    "react-number-format": "^5.4.2",
     "react-window": "^1.8.9",
     "recharts": "^2.2.0",
     "rxjs": "^7.5.6",
